--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.12.11",
-    "node-fetch": "^2.6.1",
-    "unsplash-js": "^7.0.11"
+    "mongoose": "^5.12.11"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
