--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "start": "cross-env NODE_ENV=production node index.js",
     "lint": "eslint .",
-    "format": "eslint . --fix"
+    "format": "eslint . --fix",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "Rui Quan",
   "license": "MIT",
