--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "cross-env NODE_ENV=production nodemon index.js",
     "lint": "eslint .",
     "format": "eslint . --fix",
-    "start:test": "cross-env NODE_ENV=test:cy node index.js"
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "author": "Rui Quan",
   "license": "MIT",
