--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
       - name: lint
         run: npm run lint
       - name: test
-        env: TEST_MONGODB_URI=${{ secrets.TEST_MONGODB_URI }}
+        env: 
+          TEST_MONGODB_URI=${{ secrets.TEST_MONGODB_URI }}
           MONGODB_URI=${{ secrets.MONGODB_URI }}
           PORT=${{ secrets.PORT }}
           UNSPLASH_API_KEY=${{ secrets.UNSPLASH_API_KEY }}
